# flappy_miska

./: .gitignore  CMakeLists.txt  README.md
include/: Button.h  Font.h  Game.h  Object.h  Teeth.h  TextBox.h  Texture.h  Vector2.h
src/: Button.cpp  Font.cpp  Game.cpp  Object.cpp  Teeth.cpp  TextBox.cpp  Texture.cpp  Vector2.cpp  main.cpp
web/: backend_addr.js.in  scripts.js  shell.html  styles.css
